src/test/ui/underscore-lifetime/dyn-trait-underscore.stderr
error[E0621]: explicit lifetime required in the type of `items`
  --> $DIR/dyn-trait-underscore.rs:8:5
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T>> {
   |                ---- help: add explicit lifetime `'static` to the type of `items`: `&'static [T]`
LL |     //                      ^^^^^^^^^^^^^^^^^^^^^ bound *here* defaults to `'static`
LL |     Box::new(items.iter())
   |     ^^^^^^^^^^^^^^^^^^^^^^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
